--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "NodeJS Web Components CMS",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node ./main/bin/www"
   },
   "repository": {
     "type": "git",
@@ -22,5 +23,14 @@
   "bugs": {
     "url": "https://github.com/ottogiron/ceibacms/issues"
   },
-  "homepage": "https://github.com/ottogiron/ceibacms"
+  "homepage": "https://github.com/ottogiron/ceibacms",
+  "dependencies": {
+    "body-parser": "~1.12.0",
+    "cookie-parser": "~1.3.4",
+    "debug": "~2.1.1",
+    "express": "~4.12.0",
+    "jade": "~1.9.2",
+    "morgan": "~1.5.1",
+    "serve-favicon": "~2.2.0"
+  }
 }
