--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,7 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "requirejs": "~2.1.16"
+    "requirejs": "~2.1.16",
+    "polymer": "Polymer/polymer#~0.5.5"
   }
 }
