--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "homepage": "https://github.com/ottogiron/ceibacms",
   "dependencies": {
     "body-parser": "~1.12.0",
+    "confidence": "^1.0.0",
     "cookie-parser": "~1.3.4",
     "debug": "~2.1.1",
     "express": "~4.12.0",
