--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "express": "~4.12.0",
     "handlebars": "^3.0.0",
     "jade": "~1.9.2",
+    "jquery": "^2.1.3",
+    "jsdom": "^4.0.2",
     "morgan": "~1.5.1",
     "serve-favicon": "~2.2.0"
   }
