--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "requirejs": "~2.1.16",
     "polymer": "Polymer/polymer#~0.5.5",
-    "webcomponentsjs": "~0.5.5"
+    "webcomponentsjs": "~0.5.5",
+    "bootstrap": "~3.3.4"
   }
 }
