--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon ./main/bin/www"
+    "start": "node ./node_modules/.bin/nodemon ./main/bin/www"
   },
   "repository": {
     "type": "git",
@@ -35,6 +35,7 @@
     "jquery": "^2.1.3",
     "jsdom": "^4.0.2",
     "morgan": "~1.5.1",
+    "nodemon": "^1.3.7",
     "serve-favicon": "~2.2.0"
   }
 }
